package com.app.vatavaran.weatherapp.utils

object TestTags {
    const val ADD_CITY_DIALOG_BTN = "add city dialog btn"
    const val ADD_CITY_TEXT_FIELD = "add city text field"
    const val ADD_CITY_DIALOG = "add city dialog"
    const val ADD_CITY_FAB = "add city fab"
    const val ADD_CITY_TOPBAR = "add city topbar"
    const val HOME_FAB = "home fab"
    const val HOME_BTN_ARROW = "Arrow Dpdown"
    const val DAILY_TEMP_CARD = "daily temp card"
    const val HOUR_CARD = " hours card"
    const val CURRENT_WEATHER_VIEW = "current weather view"
    const val MAIN_COLUMN = "main column"
}